--- a/package.json
+++ b/package.json
@@ -1,25 +1,35 @@
 {
-  "name": "keystone-blog",
+  "name": "thisiswhyimbroke-blog",
   "version": "0.0.0",
   "private": true,
   "dependencies": {
+    "async": "2.1.4",
+    "babel-loader": "^6.2.8",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0",
+    "babel-preset-stage-1": "^6.16.0",
+    "babel-register": "^6.18.0",
+    "dotenv": "4.0.0",
+    "json-loader": "^0.5.4",
     "keystone": "4.0.0-beta.5",
     "lodash": "^4.13.1",
-    "pug": "2.0.0-beta11",
     "node-sass": "4.5.0",
     "node-sass-middleware": "0.11.0",
-    "dotenv": "4.0.0",
     "keystone-email": "1.0.5",
-    "async": "2.1.4"
+    "react": "^15.4.0",
+    "react-dom": "^15.4.0",
+    "react-engine": "^4.2.0",
+    "webpack": "^1.13.3"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "eslint": "3.15.0",
     "eslint-config-keystone": "3.0.0",
     "eslint-plugin-react": "^5.1.1"
   },
   "scripts": {
     "lint": "eslint .",
-    "start": "node keystone.js"
+    "start": "webpack && node preprocessor.js"
   }
 }
