--- a/package.json
+++ b/package.json
@@ -4,37 +4,39 @@
   "private": true,
   "dependencies": {
     "async": "2.1.4",
+    "axios": "^0.16.2",
     "babel-loader": "^6.2.8",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-1": "^6.24.1",
     "babel-register": "^6.18.0",
     "dotenv": "4.0.0",
+    "fbemitter": "^2.1.1",
     "json-loader": "^0.5.4",
     "keystone": "4.0.0-beta.5",
-    "lodash": "^4.13.1",
+    "keystone-email": "1.0.5",
+    "lodash": "^4.10.1",
     "node-sass": "4.5.0",
     "node-sass-middleware": "0.11.0",
-    "keystone-email": "1.0.5",
-    "axios": "^0.16.2",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-engine": "^4.2.0",
-    "fbemitter": "^2.1.1",
-    "lodash": "^4.10.1",
-    "react-redux": "^5.0.5",
     "react-localize-redux": "2.4.1",
+    "react-redux": "^5.0.5",
     "react-router-redux": "^4.0.8",
     "redux": "^3.7.1",
     "redux-promise": "^0.5.3",
     "redux-thunk": "^2.2.0",
-    "webpack": "^1.13.3"
+    "webpack": "^1.15.0"
   },
   "devDependencies": {
+    "css-loader": "^0.28.7",
     "eslint": "3.15.0",
     "eslint-config-egg": "^5.1.1",
     "eslint-config-keystone": "3.0.0",
-    "eslint-plugin-react": "^5.1.1"
+    "eslint-plugin-react": "^5.1.1",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.19.0"
   },
   "scripts": {
     "lint": "eslint .",
