--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "babel-preset-stage-1": "^6.24.1",
     "babel-register": "^6.18.0",
     "dotenv": "4.0.0",
+    "extract-text-webpack-plugin": "^3.0.1",
     "fbemitter": "^2.1.1",
     "json-loader": "^0.5.4",
     "keystone": "4.0.0-beta.5",
@@ -36,6 +37,7 @@
     "eslint-config-egg": "^5.1.1",
     "eslint-config-keystone": "3.0.0",
     "eslint-plugin-react": "^5.1.1",
+    "isomorphic-style-loader": "^4.0.0",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.0"
   },
