--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-1": "^6.24.1",
     "babel-register": "^6.18.0",
+    "css-modules-require-hook": "^4.2.2",
     "dotenv": "4.0.0",
     "extract-text-webpack-plugin": "^3.0.1",
     "fbemitter": "^2.1.1",
