--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "lodash": "^4.10.1",
     "node-sass": "4.5.0",
     "node-sass-middleware": "0.11.0",
+    "rc-animate": "^2.4.1",
+    "rc-upload": "^2.4.3",
     "react": "^15.6.1",
+    "react-cropper": "^1.0.0",
     "react-dom": "^15.6.1",
     "react-engine": "^4.2.0",
     "react-localize-redux": "2.4.1",
