--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-cropper": "^1.0.0",
     "react-dom": "^15.6.1",
     "react-engine": "^4.2.0",
+    "react-infinite-scroller": "^1.1.1",
     "react-localize-redux": "2.4.1",
     "react-redux": "^5.0.5",
     "react-router-redux": "^4.0.8",
