--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "json-loader": "^0.5.4",
     "keystone": "4.0.0-beta.5",
     "keystone-email": "1.0.5",
+    "keystone-forgotten-password": "^1.4.0",
     "lodash": "^4.10.1",
     "node-sass": "4.5.0",
     "node-sass-middleware": "0.11.0",
