--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-paginate": "^5.0.0",
     "react-redux": "^5.0.5",
     "react-router-redux": "^4.0.8",
+    "react-share": "^1.19.0",
     "redux": "^3.7.1",
     "redux-promise": "^0.5.3",
     "redux-thunk": "^2.2.0",
