--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "4.0.0",
     "extract-text-webpack-plugin": "^3.0.1",
     "fbemitter": "^2.1.1",
+    "jquery": "^3.3.1",
     "json-loader": "^0.5.4",
     "keystone": "4.0.0-beta.5",
     "keystone-email": "1.0.5",
@@ -30,6 +31,7 @@
     "react-engine": "^4.2.0",
     "react-infinite-scroller": "^1.1.1",
     "react-localize-redux": "2.4.1",
+    "react-meta-tags": "^0.3.0",
     "react-paginate": "^5.0.0",
     "react-redux": "^5.0.5",
     "react-router-redux": "^4.0.8",
