--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "4.0.0",
     "extract-text-webpack-plugin": "^3.0.1",
     "fbemitter": "^2.1.1",
+    "gatsby-plugin-react-helmet": "^2.0.4",
     "global": "^4.3.2",
     "global-paths": "^1.0.0",
     "jquery": "^3.3.1",
@@ -32,6 +33,7 @@
     "react-cropper": "^1.0.0",
     "react-dom": "^15.6.1",
     "react-engine": "^4.2.0",
+    "react-helmet": "^5.2.0",
     "react-infinite-scroller": "^1.1.1",
     "react-localize-redux": "2.4.1",
     "react-meta-tags": "^0.3.0",
